feat: prevent pointer events on landing page logo

--- a/styles/style.css
+++ b/styles/style.css
@@ -224,6 +224,7 @@ section:first-child {
 
 .landing-page-logo {
   filter: hue-rotate(-40deg);
+  pointer-events: none;
 }
 
 @media (max-width: 992px) {
