--- a/components/section/section.module.css
+++ b/components/section/section.module.css
@@ -1,10 +1,10 @@
 .heading {
   font-size: 2.5em;
+  font-family: 'Halant';
   font-weight: var(--font-weight-bold);
-  text-transform: uppercase;
   letter-spacing: 2px;
   margin: 0 0 20px 0;
-  color: var(--color-primary);
+  
 }
 @media only screen and (max-width: 576px) {
   .heading {
