--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 
 - Base Styles
 - Landing Page
+#002625
 */
 
 :root {
@@ -13,7 +14,8 @@
   --font-size: 16px;
   --font-weight-normal: 300;
   --font-weight-bold: 600;
-  --color-text: rgb(0, 0, 0);
+  --color-text: hsl(178, 100%, 7%);
+  --color-header: hsl(178, 100%, 4%);
   --color-placeholder: var(--color-text);
   --color-background-outer: rgb(255, 255, 255);
   --color-background-inner: rgb(245, 245, 245);
@@ -61,9 +63,9 @@ h4,
 h5,
 h6 {
   font-weight: var(--font-weight-bold);
-/*  text-transform: uppercase;*/
   letter-spacing: 2px;
   line-height: 1;
+  color: var(--color-header);
 }
 h1 {
   font-size: 4em;
