--- a/sections/services.module.css
+++ b/sections/services.module.css
@@ -16,9 +16,10 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  min-height: 300px;
+  min-height: 100px;
   background-color: rgb(255, 255, 255);
-  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius-heavy);
+  box-shadow: var(--box-shadow-heavy);
 }
 @media only screen and (max-width: 992px) {
   .card {
