fix(landing page): make sure color doesn't jitter as soon as you hover over

--- a/styles/style.css
+++ b/styles/style.css
@@ -233,6 +233,7 @@ section:first-child {
 }
 
 section#landing-page {
+    background-color: #D4E8D6 !important;
     background-repeat: no-repeat, no-repeat;
     background-size: 100%, 100%;
 }
