--- a/sections/clientLogos.module.css
+++ b/sections/clientLogos.module.css
@@ -11,7 +11,7 @@
   }
 }
 
-.card {
+.dimCard, .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,4 +26,8 @@
 
   /* Microsoft Edge and Firefox 35+ */
   filter: grayscale(1) brightness(1);
+}
+
+.dimCard {
+  opacity: 0.7;
 }
