--- a/sections/clientLogos.module.css
+++ b/sections/clientLogos.module.css
@@ -1,9 +1,10 @@
 .cardList {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 100px;
+  gap: 4rem;
   margin: 30px 0 0 0;
 }
+
 @media only screen and (max-width: 768px) {
   .cardList {
     grid-template-columns: repeat(1, 1fr);
