--- a/sections/team.module.css
+++ b/sections/team.module.css
@@ -1,10 +1,12 @@
 .cardList {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 50px;
-  margin: 0 0 0 30px;
+/*  width: 100%;*/
+/*  display: grid;*/
+/*  grid-template-columns: repeat(1, 1fr);*/
+/*  gap: 50px;*/
+/*  margin: 0 0 0 30px;*/
 }
-@media only screen and (max-width: 992px) {
+
+/*@media only screen and (max-width: 992px) {
   .cardList {
     margin: 0;
   }
@@ -14,7 +16,16 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 30px;
   }
+}*/
+
+
+@media only screen and (min-width: 768px)
+{
+  .cardList {
+    width: 400px;
+  }
 }
+
 
 .card:first-child {
   outline: 2px solid red;
