eat(trendline logo): dim to match other logos

--- a/sections/clientLogos.module.css
+++ b/sections/clientLogos.module.css
@@ -12,7 +12,7 @@
   }
 }
 
-.dimCard, .card {
+.trendlineCard, .dimCard, .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,5 +30,9 @@
 }
 
 .dimCard {
+  opacity: 0.7;
+}
+
+.trendlineCard {
   opacity: 0.7;
 }
